--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,7 @@
     </div>
     <div class="mobile-menu" data-menu>
         <div class="mobile-menu-button-wrapper">
-            <button class="mobile-menu-btn" type="button">
+            <button class="mobile-menu-btn" type="button" data-hero-modal-open1>
                 Buy now
                 <svg class="mobile-menu-btn-icon">
                     <use href="./images/sprite.svg#icon-menu-button"></use>
