--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -44,7 +44,7 @@
         </picture>
         <div class="info-bio">
         <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        <button class="button-bio" data-modal-hero-open>
+        <button class="button-bio" type="button">
             <svg width="7px" height="6">
                 <use href="./images/sprite.svg#icon-arrow"></use>
             </svg>
