останній фікс багів

--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -60,10 +60,14 @@
 
             <ul class="header-but-list list">
               <li class="header-but-item">
-                <a class="header-but-link link" href="">Products</a>
+                <a class="header-but-link link" href="#our_products"
+                  >Products</a
+                >
               </li>
               <li class="header-but-item">
-                <a class="header-but-link link" href="">How it’s made?</a>
+                <a class="header-but-link link" href="#how_made"
+                  >How it’s made?</a
+                >
               </li>
             </ul>
           </div>
