--- a/src/sass/layout/_hero_header.scss
+++ b/src/sass/layout/_hero_header.scss
@@ -36,13 +36,6 @@
   }
 }
 
-.hero-center {
-  position: absolute;
-  display: flex;
-  padding-left: auto;
-  margin-right: auto;
-}
-
 .hero-case {
   position: relative;
   min-width: 170px;
@@ -446,7 +439,7 @@
   @media screen and (min-width: 1280px) {
     opacity: 0;
     visibility: hidden;
-    pointer-events: none;
+    // pointer-events: none;
   }
 }
 
@@ -454,7 +447,7 @@
   transform: translatex(100%);
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
+  // pointer-events: none;
 }
 
 .background-close {
@@ -469,20 +462,20 @@
   @media screen and (min-width: 1280px) {
     opacity: 0;
     visibility: hidden;
-    pointer-events: none;
+    // pointer-events: none;
   }
 }
 
 .background-close p {
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
+  // pointer-events: none;
 }
 
 .bat-close {
   opacity: 0;
   visibility: hidden;
-  pointer-events: none;
+  // pointer-events: none;
 }
 
 .mod-icon {
