delete outline from buttons

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -4,37 +4,60 @@
     <h2 class="about-header">How it’s made?</h2>
     <div class="about-article">
       <picture class="about-article-image">
-        <source srcset="
+        <source
+          srcset="
             ./images/about/cow-and-milk-desktop.webp 1x,
             ./images/about/cow-and-milk-desktop.webp 2x
-          " media="(min-width: 1200px)" type="image/webp" />
+          "
+          media="(min-width: 1200px)"
+          type="image/webp"
+        />
 
-        <source srcset="
+        <source
+          srcset="
             ./images/about/cow-and-milk-desktop.png 1x,
             ./images/about/cow-and-milk-desktop.png 2x
-          " media="(min-width: 1200px)" />
+          "
+          media="(min-width: 1200px)"
+        />
 
-        <source srcset="
+        <source
+          srcset="
             ./images/about/cow-and-milk-tablet.webp 1x,
             ./images/about/cow-and-milk-tablet.webp 2x
-          " media="(min-width: 768px)" type="image/webp" />
+          "
+          media="(min-width: 768px)"
+          type="image/webp"
+        />
 
-        <source srcset="
+        <source
+          srcset="
             ./images/about/cow-and-milk-tablet.png 1x,
             ./images/about/cow-and-milk-tablet.png 2x
-          " media="(min-width: 768px)" />
+          "
+          media="(min-width: 768px)"
+        />
 
-        <source srcset="
+        <source
+          srcset="
             ./images/about/cow-and-milk-mobile.webp 1x,
             ./images/about/cow-and-milk-mobile.webp 2x
-          " type="image/webp" />
+          "
+          type="image/webp"
+        />
 
-        <source srcset="
+        <source
+          srcset="
             ./images/about/cow-and-milk-mobile.png 1x,
             ./images/about/cow-and-milk-mobile.png 2x
-          " />
+          "
+        />
 
-        <img class="about-article-image" src="./images/about/cow-and-milk-desktop.png" alt="Milk and cow" />
+        <img
+          class="about-article-image"
+          src="./images/about/cow-and-milk-desktop.png"
+          alt="Milk and cow"
+        />
       </picture>
       <div class="about-article-content">
         <p class="about-article-heading">
