--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
   width: 100%;
   background-color: var(--secondary-bg-color);
-  
+
   &-copyright-container {
-    border-top: 2px solid var(--primary-line-color); 
+    border-top: 2px solid var(--primary-line-color);
   }
 
   &-leftright {
@@ -64,7 +64,8 @@
     padding-left: 5px;
     text-decoration: none;
   }
-  &-copyright1, &-copyright2 {
+  &-copyright1,
+  &-copyright2 {
     font-family: DM Sans;
     font-style: normal;
     font-weight: 700;
@@ -74,7 +75,7 @@
     color: var(--secondary-dark-shaded-color);
     padding-top: 30px;
     padding-bottom: 30px;
-    
+
     &-container {
       text-align: center;
     }
@@ -128,6 +129,7 @@
   &-link:focus {
     background-color: var(--accent-color);
     color: var(--primary-light-color);
+    outline: none;
   }
 
   &-icon {
@@ -151,12 +153,12 @@
     &-right {
       padding-top: 180px;
     }
-  &-copyright2 {
-    display: block;
-  }
-  &-copyright1 {
-    display: none;
-  }
+    &-copyright2 {
+      display: block;
+    }
+    &-copyright1 {
+      display: none;
+    }
   }
 }
 
