--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -57,6 +57,7 @@
 .info-button:focus {
   color: var(--primary-light-color);
   background-color: var(--accent-color);
+  outline: none;
 }
 
 .wrapper-container {
