--- a/src/partials/button-up.html
+++ b/src/partials/button-up.html
@@ -1,5 +1,5 @@
 <div class="button-block">
-  <button class="button button-up">
+  <button class="button button-up" aria-label="button for scroll up">
     <svg class="icon-up-arrow-angle">
       <use href="./images/icon-sprite.svg/#icon-up-arrow-angle"></use>
     </svg>
