--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,6 +14,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 class="footer-social-link"
+                aria-label="github"
               >
                 <svg class="footer-social-icon">
                   <use href="./images/icon-sprite.svg#icon-github"></use>
@@ -26,6 +27,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 class="footer-social-link"
+                aria-label="telegram"
               >
                 <svg class="footer-social-icon">
                   <use href="./images/icon-sprite.svg#icon-telegram"></use>
@@ -38,6 +40,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 class="footer-social-link"
+                aria-label="facebook"
               >
                 <svg class="footer-social-icon">
                   <use href="./images/icon-sprite.svg#icon-facebook"></use>
