scale on gallery

--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -34,6 +34,13 @@
     margin: 0;
     padding: 0;
     box-sizing: inherit;
+    &:hover {
+      transform: scale(1.35);
+      padding: 5px;
+      box-sizing: inherit;
+      object-fit: cover;
+      background: $text-pink-color;
+    }
   }
 
   figure {
