--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -41,6 +41,8 @@
                                     <h3>Ice coffee </h3>
                                     <img class="product-img" src="https://picsum.photos/250/70" alt="photo ice cream">
                                     <p class="product-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, placeat ex. Quaerat delectus non quo, ut architecto veniam qui iure repellendus pariatur ullam consequuntur, odit porro aliquid perspiciatis, corrupti aperiam.</p>
+                                    <!-- <span class="price">$ 32</span>
+                                    <a href="" class="product-button" data-modal-close>cart</a> -->
                                 </div>
                             </div>
                         </div>
