--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -552,3 +552,40 @@
   text-align: center;
   letter-spacing: 0.04em;
 }
+
+// .price {
+//   font-size: 36px;
+//   color: var(--dark-pink);
+//   display: block;
+//   margin-top: 12px;
+//   margin-bottom: 12px;
+// }
+
+// .product-button {
+//   text-decoration: none;
+//   display: inline-block;
+
+//   padding: 13px 15px;
+//   min-width: 176px;
+//   height: 44px;
+
+//   border-radius: 22px;
+//   font-weight: bold;
+//   font-size: 14px;
+//   text-transform: uppercase;
+
+//   background: var(--dark-pink);
+//   color: var(--white);
+
+//   cursor: pointer;
+
+//   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   &:hover,
+//   &:focus-within {
+//     padding: 16px 15px;
+//     width: 276px;
+//     height: 84px;
+//     font-size: 44px;
+//   }
+// }
