--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,6 @@
 <section id="about_us" class="gallery">
+  <h2 class="visually-hidden">gallery</h2>
+
   <div class="gallery-wrapper">
     <ul class="gallery-list">
       <li class="gallery-item">
