--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -56,7 +56,7 @@
               ice cream<br />
               made with
             </h1>
-            <p class="slogan-prefix">passion</p>
+            <h2 class="slogan-prefix">passion</h2>
 
             <ul class="header-but-list list">
               <li class="header-but-item">
@@ -133,8 +133,6 @@
                 ./images/hero-header/desktop-ice-cream.webp    1x,
                 ./images/hero-header/desktop-ice-cream@2x.webp 2x
               "
-              width="236"
-              height="555"
               media="(min-width: 1280px)"
               type="image/webp"
             />
@@ -273,21 +271,21 @@
 
     <ul class="mobil-list list" id="menu2">
       <li class="mobil-item">
-        <a class="mobil-link accent link" id-Exit1 href="#home">Home</a>
+        <a class="mobil-link accent link" id-exit1 href="#home">Home</a>
       </li>
       <li class="mobil-item">
-        <a class="mobil-link link" id-Exit2 href="#about_us">About us</a>
+        <a class="mobil-link link" id-exit2 href="#about_us">About us</a>
       </li>
       <li class="mobil-item">
-        <a class="mobil-link link" id-Exit3 href="#how_made">How it’s made?</a>
+        <a class="mobil-link link" id-exit3 href="#how_made">How it’s made?</a>
       </li>
       <li class="mobil-item">
-        <a class="mobil-link link" id-Exit4 href="#our_products"
+        <a class="mobil-link link" id-exit4 href="#our_products"
           >Our products</a
         >
       </li>
       <li class="mobil-item">
-        <a class="mobil-link link" id-Exit5 href="#contact">Contact</a>
+        <a class="mobil-link link" id-exit5 href="#contact">Contact</a>
       </li>
     </ul>
   </div>
