--- a/src/partials/hero_header.html
+++ b/src/partials/hero_header.html
@@ -274,19 +274,19 @@
     </div>
 
     <ul class="mobil-list list" id="menu2">
-      <li class="mobil-item" id-exit1>
+      <li class="mobil-item" data-id-exit1>
         <a class="mobil-link accent link" href="#home">Home</a>
       </li>
-      <li class="mobil-item" id-exit2>
+      <li class="mobil-item" data-id-exit2>
         <a class="mobil-link link" href="#about_us">About us</a>
       </li>
-      <li class="mobil-item" id-exit3>
+      <li class="mobil-item" data-id-exit3>
         <a class="mobil-link link" href="#how_made">How it’s made?</a>
       </li>
-      <li class="mobil-item" id-exit4>
+      <li class="mobil-item" data-id-exit4>
         <a class="mobil-link link" href="#our_products">Our products</a>
       </li>
-      <li class="mobil-item" id-exit5>
+      <li class="mobil-item" data-id-exit5>
         <a class="mobil-link link" href="#contact">Contact</a>
       </li>
     </ul>
