--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,5 @@
 <section class="container-contacts">
+  <div class="natali"></div>
   <div class="container" id="Contact">
     <h2 class="visually-hidden">Contacts</h2>
 
