--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -7,12 +7,38 @@
     background-size: contain;
     background-position: center;
   }
+
   @media screen and (min-width: 320px) and (max-width: 767px) {
-    .container {
-      padding-top: 84px;
+    .container{
+      margin-top: -86px;
     }
-  }
-}
+       
+    .natali{
+     display: block;
+     width: 100%;
+     height: 86px;
+     background-color: var(--white);
+   }
+ }
+ 
+ }
+    @media screen and (min-width: 768px) and (max-width: 1279px) {
+     .container{
+       margin-top: -78px;
+     }
+     .natali{
+       display: block;
+       width: 100%;
+       height: 78px;
+       background-color: var(--white);
+      }
+    }
+
+      @media screen and (min-width: 1280px){
+        .natali{
+          display: none;
+        }
+       }
 
 .contacts {
   display: flex;
