--- a/src/sass/layout/_customer_reviews.scss
+++ b/src/sass/layout/_customer_reviews.scss
@@ -76,8 +76,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
   margin: auto;
+  width: 56px;
+  justify-content: space-between;
 }
 .slick-active {
   width: 12px;
