переделал карточки чтоб вылезали за секцию

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,5 +1,15 @@
 .container-contacts {
+  position: relative;
   background-color: #fff5f6;
+
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    height: 1438px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1279px){
+    height: 704px;
+  }
+
+  
 
   @media screen and (min-width: 1200px) {
     background-image: url(../images/7-contacts/contacts.png);
@@ -10,35 +20,40 @@
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     .container{
-      margin-top: -86px;
+      position: absolute;
+      top: 0px;
+      left:50%;
+      transform: translatex(-50%,);
     }
-       
     .natali{
      display: block;
      width: 100%;
-     height: 86px;
+     height: 85px;
      background-color: var(--white);
    }
  }
  
- }
     @media screen and (min-width: 768px) and (max-width: 1279px) {
-     .container{
-       margin-top: -78px;
-     }
-     .natali{
+      .container{
+        position: absolute;
+        top: 0px;
+        left:50%;
+        transform: translatex(-50%,);
+      }
+      .natali{
        display: block;
        width: 100%;
-       height: 78px;
+       height: 75px;
        background-color: var(--white);
-      }
-    }
+     }
+   }
 
       @media screen and (min-width: 1280px){
         .natali{
           display: none;
         }
        }
+      }
 
 .contacts {
   display: flex;
