сделал полностью герой кроме картинок

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,7 +1,8 @@
 .page-header {
   position: absolute;
-width: 100%;
+  width: 100%;
   left: 50%;
+  z-index: 10;
   transform: translateX(-50%);
   background: transparent;
 
@@ -33,11 +34,12 @@ width: 100%;
 }
 
 .logo-name {
-  font-size: 26px;
-  color: #d41443;
-  font-weight: 400;
   font-family: 'Titan One';
-  line-height: 95.5%;
+  font-size: 23px;
+  font-weight: 400;
+  line-height: 1.25;
+  letter-spacing: 0.4 em;
+  color: #d41443;
 }
 .burger-btn {
   display: block;
@@ -139,6 +141,7 @@ width: 100%;
   .site-nav-logo {
     position: static;
     padding-left: 0px;
+    margin-right: 48px;
   }
 
   .logo-img {
@@ -147,12 +150,13 @@ width: 100%;
     // transform: translateX(50%);
   }
 
-  .site-nav-logo {
-    margin-right: 110px;
-  }
-
   .site-nav-list {
     display: flex;
+  }
+
+  .site-nav-item {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 
   .site-nav-item {
@@ -162,11 +166,10 @@ width: 100%;
   }
 
   .site-nav-link {
-    padding-top: 50px;
-    padding-bottom: 50px;
-
     font-weight: bold;
     color: var(--primary-white-color);
+    font-size: 16px;
+    line-height: 1.312;
 
     transition-property: color;
     transition-duration: 250ms;
