сделан герой страницы

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -140,12 +140,6 @@
     line-height: 0.911;
   }
 
-  .filtr-btn {
-    font-size: 14px;
-    line-height: 1.285;
-    padding: 11px 20px;
-  }
-
   .hero-text-box {
     position: absolute;
     top: 292px;
@@ -167,10 +161,14 @@
 
   .hero-text {
     &::before {
+      position: absolute;
+      top: -47px;
+      left: -121px;
       content: '';
       width: 124px;
       height: 126px;
       background-image: url('../images/img-hero/milk-tablet.png');
+      background-size: contain;
     }
   }
   @media screen and (min-device-pixel-ratio: 2),
@@ -178,7 +176,6 @@
     screen and (min-resolution: 2dppx) {
     .hero-text {
       &::before {
-        background-size: contain;
         background-image: url('../images/img-hero/milk-tablet@2x.png');
       }
     }
@@ -252,6 +249,28 @@
 
     color: var(--primary-white-color);
   }
+
+  .marketing-list {
+    &::after {
+      position: absolute;
+      top: 171px;
+      left: -118px;
+      content: '';
+      width: 168px;
+      height: 133px;
+      background-image: url('../images/img-hero/girl-tablet.png');
+      background-size: cover;
+    }
+  }
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .marketing-list {
+      &::after {
+        background-image: url('../images/img-hero/girl-tablet@2x.png');
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -277,6 +296,12 @@
     /* or 52px */
   }
 
+  .filtr-btn {
+    font-size: 14px;
+    line-height: 1.285;
+    padding: 11px 20px;
+  }
+
   .circle::before {
     top: 52px;
     left: 475px;
@@ -298,6 +323,7 @@
   }
 
   .hero-text {
+    margin-bottom: 20px;
     font-size: 14px;
     line-height: 1.42;
   }
@@ -314,6 +340,8 @@
 
   .hero-text {
     &::before {
+      top: -102px;
+      left: -181px;
       content: '';
       width: 188px;
       height: 191px;
@@ -325,35 +353,41 @@
     screen and (min-resolution: 2dppx) {
     .hero-text {
       &::before {
-        background-size: contain;
         background-image: url('../images/img-hero/milk-desctop@2x.png');
       }
     }
   }
 
-  .hero-text {
-    &::before {
+  .marketing-list {
+    top: 156px;
+    left: 1111px;
+  }
+
+  .marketing-list {
+    &::after {
+      position: absolute;
+      top: 246px;
+      left: -177px;
       content: '';
-      width: 188px;
-      height: 191px;
-      background-image: url('../images/img-hero/milk-desctop.png');
-      background-size: cover;
+      width: 293px;
+      height: 232px;
+      background-image: url('../images/img-hero/girl-desctop.png');
     }
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-  }
-  .hero-text {
-    &::before {
-      background-size: contain;
-      background-image: url('../images/img-hero/milk-desctop@2x.png');
+    .marketing-list {
+      &::after {
+        background-image: url('../images/img-hero/girl-desctop@2x.png');
+      }
     }
   }
 
-  .marketing-list {
-    left: 1106px;
-    top: 251px;
+  .marketing-item {
+    & + & {
+      margin-top: 15px;
+    }
   }
 
   .marketing-sum {
