--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -155,8 +155,7 @@
   }
 
   .site-nav-item {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 30px 0;
   }
 
   .site-nav-item {
@@ -166,7 +165,8 @@
   }
 
   .site-nav-link {
-    font-weight: bold;
+    padding: 30px 0;
+    font-weight: 700;
     color: var(--primary-white-color);
     font-size: 16px;
     line-height: 1.312;
