делаю мобильное меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="page-header">
+<header class="page-header" id="home">
   <div class="container">
     <nav class="site-nav">
       <a href="" class="site-nav-logo link">
@@ -7,19 +7,19 @@
       </a>
       <ul class="site-nav-list list">
         <li class="site-nav-item">
-          <a href="#" class="site-nav-link link">Home</a>
+          <a href="#home" class="site-nav-link link">Home</a>
         </li>
         <li class="site-nav-item">
-          <a href="#" class="site-nav-link link">About us</a>
+          <a href="#about" class="site-nav-link link">About us</a>
         </li>
         <li class="site-nav-item">
-          <a href="#" class="site-nav-link link">How it's made?</a>
+          <a href="#advantages" class="site-nav-link link">How it's made?</a>
         </li>
         <li class="site-nav-item">
-          <a href="#" class="site-nav-link link">Our products</a>
+          <a href="#products" class="site-nav-link link">Our products</a>
         </li>
         <li class="site-nav-item">
-          <a href="#" class="site-nav-link link">Contact</a>
+          <a href="#contacts" class="site-nav-link link">Contact</a>
         </li>
       </ul>
     </nav>
@@ -39,15 +39,15 @@
     </button>
 
     <!-- MOBILE MENU -->
-    <!-- <div class="mobile-menu">
+    <div class="mobile-menu">
       <button class="close-btn" type="button">
-        <svg class="close_burger" width="40" height="40">
+        <svg class="close-btn-icon" width="40" height="40">
           <use href="./images/sprite/sprite_projects.svg#close_burger"></use>
         </svg></button>
-      <button class="mdl-btn" type="button">
-        <span class="mdl-btn-text">Buy now</span>
-        <svg class="mdl-btn-icon">
-          <use href="#"></use>
+      <button class="menu-btn" type="button">
+        <span class="menu-btn-text">Buy now</span>
+        <svg class="menu-btn-icon">
+          <use href="./images/sprite/sprite_projects.svg#contacts-icon-btn"></use>
         </svg></button>
       <ul class="menu-nav-list list">
         <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Home</a></li>
@@ -56,7 +56,7 @@
         <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Our products</a></li>
         <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Contact</a></li>
       </ul>
-    </div> -->
+    </div>
   </div>
 
 </header>
