--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -60,6 +60,94 @@
   .modal-btn {
     display: none;
   }
+
+  .mobile-menu {
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    width: 100%;
+    height: 100vh;
+    padding: 60px 20px 21px 21px;
+
+    background-color: #e17992;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 1px 3px rgba(0, 0, 0, 0.16);
+    transform: translateX(0%) translateY(0%);
+    filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
+
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    // overflow: scroll;
+
+    &.is-open {
+      transform: translateX(0%) translateY(-50%);
+    }
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    width: 40px;
+    height: 40px;
+
+    background-color: transparent;
+    border: none;
+    padding: 0;
+  }
+
+  .close-btn-icon {
+    fill: var(--primary-white-color);
+    width: 14px;
+    height: 14px;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-btn {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-width: 209px;
+
+    padding: 11px 37px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.312;
+    border-radius: 22px;
+    background-color: var(--primary-white-color);
+    border: none;
+    color: var(--accent-color);
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover {
+      background-color: var(--white-btn-hover);
+    }
+  }
+
+  .menu-btn-icon {
+    width: 6px;
+    height: 11px;
+    stroke: var(--accent-color);
+    fill: var(--accent-color);
+  }
+}
+
+.menu-nav-link {
+  display: block;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
