--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,7 @@
       </svg>
     </button>
 
-    <button class="modal-btn" type="button">
+    <button class="modal-btn" type="button" data-modal-open>
       <span class="modal-btn-text">Buy now</span>
       <svg class="modal-btn-icon">
         <use href="./images/sprite/sprite_projects.svg#contacts-icon-btn"></use>
