создал мобильное меню

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- burger btn -->
-    <button class="burger-btn" type="button">
+    <button class="burger-btn" type="button" data-menu-button>
       <svg class="burger-btn-icon">
         <use href="./images/sprite/sprite_projects.svg#Burger"></use>
       </svg>
@@ -39,8 +39,8 @@
     </button>
 
     <!-- MOBILE MENU -->
-    <div class="mobile-menu">
-      <button class="close-btn" type="button">
+    <div class="mobile-menu" data-menu>
+      <button class="close-btn" type="button" data-menu-close>
         <svg class="close-btn-icon" width="40" height="40">
           <use href="./images/sprite/sprite_projects.svg#close_burger"></use>
         </svg></button>
