--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,11 +50,11 @@
           <use href="./images/sprite/sprite_projects.svg#contacts-icon-btn"></use>
         </svg></button>
       <ul class="menu-nav-list list">
-        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Home</a></li>
-        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">About us</a></li>
-        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">How it's made?</a></li>
-        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Our products</a></li>
-        <li class="menu-nav-item"><a href="#" class="menu-nav-link link">Contact</a></li>
+        <li class="menu-nav-item"><a href="#home" class="menu-nav-link link">Home</a></li>
+        <li class="menu-nav-item"><a href="#about" class="menu-nav-link link">About us</a></li>
+        <li class="menu-nav-item"><a href="#advantages" class="menu-nav-link link">How it's made?</a></li>
+        <li class="menu-nav-item"><a href="#products" class="menu-nav-link link">Our products</a></li>
+        <li class="menu-nav-item"><a href="#contacts" class="menu-nav-link link">Contact</a></li>
       </ul>
     </div>
   </div>
