--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -59,7 +59,7 @@
 .mobile-menu {
   position: fixed;
   top: 0;
-  right: 0;
+  right: -100vw;
   z-index: 20;
   width: 250px;
   height: 100vh;
@@ -68,7 +68,7 @@
   background-color: #e17992;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
-  transform: translateX(0%) translateY(0%);
+
   filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
 
   transition-property: transform;
@@ -77,7 +77,7 @@
   // overflow: scroll;
 
   &.is-open {
-    transform: translateX(0%) translateY(-50%);
+    transform: translateX(-100vw);
   }
 }
 
@@ -251,6 +251,10 @@
 }
 
 @media screen and (min-width: 1280px) {
+  .mobile-menu {
+    display: none;
+  }
+
   .burger-btn {
     display: none;
   }
