--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,7 +3,7 @@
     <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
             <svg class="backdrop-icon-close">
-                <use href="../src/images/sprite/sprite_projects.svg#close"></use>
+                <use href="../src/images/sprite/sprite_projects.svg#close_burger"></use>
             </svg>
         </button>
         <form action="#" class="modal-form">
