--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -25,10 +25,6 @@
 }
 
 .logo-img {
-  // position: absolute;
-  // top: 0;
-  // left: 0;
-  // transform: translateY(17%);
   width: 50px;
   height: 50px;
 }
@@ -171,7 +167,7 @@
     font-size: 16px;
     line-height: 1.312;
 
-    transition-property: color;
+    transition-property: color, transform;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
