--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -33,14 +33,16 @@
   width: 30px;
   height: 30px;
   background: transparent;
+  border: none;
 }
 
 .backdrop-icon-close {
   width: 18px;
   height: 18px;
+  stroke: var(--primary-white-color);
 
   .modal-close-btn:hover &,
-  .modal-close-btn:focus {
+  .modal-close-btn:focus & {
     stroke: var(--accent-color);
   }
 }
@@ -97,13 +99,14 @@
 
 .modal-form-icon {
   position: absolute;
+  fill: var(--label-color);
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
   display: block;
   width: 18px;
   height: 18px;
-  transition: background-color 250ms linear;
+  transition: fill 250ms linear;
 
   .modal-form-input:focus + & {
     fill: var(--accent-color);
