--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,6 +1,13 @@
 <article class="example">
   <h1>HTML-фрагменты</h1>
 
+  <h1>HELLLOOO word</h1>
+    <h2>Stas</h2>
+    <h3>Artem</h3>
+    <h4>Test</h4>
+    <h5>Test</h5>
+    <h5>Test</h5>
+
   <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
   <img src="images/demo.jpg" alt="" width="320" />
   <p>
