--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,7 +1,7 @@
 <article class="example">
   <h1>HTML-фрагменты</h1>
 
-  <h1>HELLLOOO word</h1>
+  <h3>hhhhhhhhhhhhhHELLLOOO word</h3>
     <h2>Stas</h2>
     <h3>Artem</h3>
     <h4>Test</h4>
