--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,5 +1,6 @@
 <article class="example">
   <h1>HTML-фрагменты</h1>
+  <h2>Seleznov</h2>
 
   <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
   <img src="images/demo.jpg" alt="" width="320" />
