--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,15 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/variables';
+
+@import './base/common';
+@import './base/container';
+
+@import './layout/header';
+@import './layout/hero';
+@import './layout/products';
+@import './layout/production';
+@import './layout/comments';
+@import './layout/locations';
+@import './layout/footer';
