Правки первоначальной настройки

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,12 +23,13 @@
 
 @import "./layout/header";
 @import "./layout/hero";
-@import "./layout/features";
-@import "./layout/solutions";
-@import "./layout/realization";
 @import "./layout/advantages";
-@import "./layout/teacher";
-@import "./layout/review";
-@import "./layout/form";
-@import "./layout/footer";
-@import "./layout/copyright";
+@import "./layout/problems";
+@import "./layout/how-we-do";
+@import "./layout/program";
+@import "./layout/benefits";
+@import "./layout/about";
+@import "./layout/guarantee";
+@import "./layout/reviews";
+@import "./layout/contacts";
+@import "./layout/footer"
