Corrected partials, added color variables, _visually_hidden.scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,14 +5,16 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './utils/variables';
+@import './utils/visually_hidden';
 
 @import './base/common';
 @import './base/container';
 
-@import './layout/header';
-@import './layout/hero';
+@import './layout/hero-header';
 @import './layout/products';
-@import './layout/production';
-@import './layout/comments';
-@import './layout/locations';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/gallery';
+@import './layout/reviews';
+@import './layout/contacts';
 @import './layout/footer';
