--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,6 +2,49 @@
   $main-font: 'DM Sans', sans-serif;
   $secondary-font: 'Titan One', cursive;
 
+  // ============= ЦВЕТА ЗАГОЛОВКОВ, АКЦЕНТОВ ==============
+
   $accent-color: #d41443;
-  $sub-title-color: #ffa5ba;
+  // Яркий красный цвет для заголовков, акцентов, некоторых кнопок
+  $label-color: #ffa5ba;
+  // Розовый цвет для лейблов заголовков
+
+  // ============= ЦВЕТА ТЕКСТА ==============
+
+  $primary-text-color: #ffffff;
+  // Белый цвет для навигации, заголовка и текста на ярком фоне, некоторых кнопок, карточек в секции Contacts
+
+  $primary-desc-color: #000000;
+  // Черный цвет текста в секциях
+  $secondary-desc-color: #907e82;
+  // Серый цвет текста и контактов в секциях About & Contacts. Цвет copyright.
+
+  // ============= ЦВЕТА BACKGROUNDS СЕКЦИЙ ==============
+
+  $primary-bg-color: #e5e5e5;
+  // Фон секций Products, Gallery, Reviews
+
+  $secondary-bg-color: #fff5f6;
+  // Фон секции Contacts и Footer
+
+  $review-bg-color: #fafafa;
+  // Фон слайдера в секции Reviews
+  $mobile-menu-color: #e17992;
+  // Цвет мобильного меню
+
+  // ============= ДРУГИЕ ЦВЕТА BACKGROUNDS (HERO, КАРТОЧКИ) ==============
+
+  $hero-bg-color: #ffb8ca;
+  // Фон секции hero-header и первой карточки товара в секции Products
+  $secondary-product-bg-color: #f0d1a5;
+  // Фон второй карточки товара в секции Products и фон надписи Cafe в Contacts
+  $third-product-bg-color: #c2e297;
+  // Фон третьей карточки товара в секции Products и фон надписи Food track в Contacts
+
+  // ============= ЦВЕТА ХОВЕРОВ/ФОКУСОВ КНОПОК ==============
+
+  $primary-btn-hover: #ecebeb;
+  // Цвет ховера/фокуса белой кнопки
+  $secondary-btn-hover: #c7133e;
+  // Цвет ховера/фокуса красной кнопки
 }
