--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -31,4 +31,4 @@
 
   <div class="background"></div>
 </article>
-<h2>helloWorld helloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorldhelloWorld</h2>
+<h1>dfghjkl</h1>
