--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,10 +5,13 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './utils/variables';
-@import './utils/visually_hidden';
+@import './utils/visually-hidden';
 
 @import './base/common';
 @import './base/container';
+
+@import './components/button';
+@import './components/section';
 
 @import './layout/hero-header';
 @import './layout/products';
