--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,4 +32,4 @@
 @import "./layout/guarantee";
 @import "./layout/reviews";
 @import "./layout/contacts";
-@import "./layout/footer"
+@import "./layout/footer";
