--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,8 +8,7 @@
 @import './base/common';
 @import './base/container';
 // /* ===========COMPONENTS===========*/
-// @import './components/burger';
-// @import './components/button';
+@import './components/button';
 /* ===========END=COMPONENTS===========*/
 @import './layout/hero-header';
 @import './layout/products';
@@ -19,5 +18,4 @@
 @import './layout/customer-reviews';
 @import './layout/contacts';
 @import './layout/footer';
-// // /* ===========MODAL===========*/
-// @import './layout/modal-window';
+@import './layout/burger';
