Сделал базу секции Products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,1 +1,53 @@
-<h2>Products</h2>
+<section class="products">
+  <div class="container">
+    <label class="products-label">
+      100% Natural
+      <h2 class="products">Products</h2>
+    </label>
+
+    <ul>
+      <li>
+        <h3 class="products-title">ICE CREAM</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <a class="products-link" href="">
+          <img
+            class="products-arrow"
+            src="../src/images/mobile/advantages/m-arrow-point@1x.png"
+            alt="Описание товара"
+          />
+        </a>
+      </li>
+      <li>
+        <h3 class="products-title">ICE COFFEE</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <a class="products-link" href="">
+          <img
+            class="products-arrow"
+            src="../src/images/mobile/advantages/m-arrow-point@1x.png"
+            alt="Описание товара"
+          />
+        </a>
+      </li>
+      <li>
+        <h3 class="products-title">MILKSHAKES</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+          ut labore et. dolore magna aliqua facilisis.
+        </p>
+        <a class="products-link" href="">
+          <img
+            class="products-arrow"
+            src="../src/images/mobile/advantages/m-arrow-point@1x.png"
+            alt="Описание товара"
+          />
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
