--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -3,6 +3,10 @@
   padding: 0 15px;
   margin: 0 auto;
 
+  // @media screen and (min-width: 320px) {
+  //   width: 320px;
+  // }
+
   @media screen and (min-width: 768px) {
     width: 730px;
   }
