--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <main>
-    <section class="section">
+    <section class="section-products">
         <div class="container">
-            <h2 class="section__title">100% natural</h2>
+            <h2 class="section-products__title">100% natural</h2>
             <p class="section__description">products</p>
         <ul class="products list">
             <li class="products__item">
