--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -132,12 +132,21 @@
 
   margin-bottom: 66px;
 
+  position: relative;
+
   &::after {
     content: '';
     display: block;
-
+    background-image: url(../images/mobile/three-dots.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 6px;
-    width: 6px;
+    width: 26px;
+
+    position: absolute;
+    top: 55px;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
