--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,5 @@
 <section class="contacts container">
   <h2 class="visually-hidden">Контакты</h2>
-  <!-- <div class="contacts__blok"> -->
   <div class="contacts__block">
     <div class="contacts__card">
       <p class="contacts__card-title-cafe">CAFE</p>
@@ -93,17 +92,17 @@
       <li class="contacts__button-list-item">
         <button type="button" class="contacts__button-first">
           Our Locations
-          <!-- <svg class="contacts__button-icon">
-            <use href="./images/sprite.svg#right-arrow"></use>
-          </svg> -->
+          <svg class="contacts__button-icon">
+            <use href="./images/sprite.svg#"></use>
+          </svg>
         </button>
       </li>
       <li class="contacts__button-list-item">
         <button type="button" class="contacts__button-second">
           Franchise
-          <!-- <svg class="contacts__button-icon">
-            <use href="./images/sprite.svg#right-arrow"></use>
-          </svg> -->
+          <svg class="contacts__button-icon">
+            <use href="./images/sprite.svg#"></use>
+          </svg>
         </button>
       </li>
     </ul>
