--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,7 +1,11 @@
+.contacts {
+    background-color: var(--font-secondary-color);
+}
+
+
 @media (min-width: 320px) {
     
 .contacts {
-    
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -126,7 +130,8 @@ font-weight: 700;
 @media (min-width: 768px) {
 
     .contacts {
-        padding: 20px 34px;
+        padding: 0 24px;
+        font-size: 14px;
 
         & h3 {
             font-size: 14px;
@@ -136,14 +141,14 @@ font-weight: 700;
     .contacts__block {
         display: flex;
         width: 100%;
-        margin-left: -34px;
+        margin-left: -20px;
         margin-top: -20px;
         justify-content: center;
     }
 
     .contacts__card {
         width: calc(100% / 3 - 20px);
-        margin-left: 34px;
+        margin-left: 20px;
         margin-top: 20px;
         margin-bottom: 81px;
         padding: 50px 32px;
@@ -205,15 +210,40 @@ font-weight: 700;
 
     .contacts {
         padding: 20px 0;
+        font-size: 16px;
     }
 
     .contacts__block {
     background-image: url(../images/desktop/desk_address_bg.png);
     background-repeat: no-repeat;
+    margin-left: -30px;
+    margin-top: -30px;
 
     }
 
     .contacts__card {
     margin-bottom: 86px;
+    padding-left: 44px;
+    padding-right: 44px;
+    margin-left: 30px;
+    margin-top: 30px;
 }
+
+.contacts h3 {
+    font-size: 16px;
+}
+
+.contacts__card-cafe-item p {
+    font-size: 16px;
+}
+
+    .contacts__button-first {
+        width: 190px;
+    }
+
+    .contacts__button-second {
+        width: 190px;
+    }
+
+
 }
