--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,3 @@
-// .footer  {
-//     height: 100vh;
-// }
-
 @media (min-width: 320px) {
 
 .footer {
@@ -117,6 +113,7 @@ color: var(--text-content-color);
 .footer {
     background-color: var(--font-secondary-color) ;
     padding-top: 138px;
+
 }
 
 .footer__title {
@@ -130,6 +127,8 @@ color: var(--text-content-color);
     padding: 0 34px;
     border-bottom: 1px solid #E1E1E1;
     padding-bottom: 91px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .footer__icon-list {
@@ -172,10 +171,26 @@ letter-spacing: 0.06em;
 .footer {
     max-width: 1280px;
     margin: 0 auto;
+    padding-top: 145px;
 }    
 
+.footer__block {
+    padding-left: 125px;
+    padding-right: 125px;
+    padding-bottom: 97px;
+    max-width: 1280px;
+}
+
 .footer__title-head {
-    min-width: 464px;
+    min-width: 478px;
+}
+
+.footer__title-text {
+    font-size: 30px;
+}
+
+.footer__title-head {
+    font-size: 58px;
 }
 
 }    
