Until button in desktop version

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,16 +4,18 @@
   padding-left: 20px;
 
   @media screen and (min-width: 320px) {
-    width: 320px;
+    max-width: 480px;
   }
 
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
     padding-right: 40px;
     padding-left: 40px;
   }
 
-  @media screen and (min-width: 1280px) {
-    max-width: 1316px;
+  @media screen and (min-width: 1400px) {
+    max-width: 1344px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
